# qclib

./: .gitignore  .pylintrc  .travis.yml  CITATION.cff  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
example/: comparison.ipynb  sparse_state_preparation.ipynb
example/baa_schmidt/: Analysis.ipynb  Cnots and depth.ipynb  Entanglement_Experiments.ipynb  Experiment.ipynb  Tensor Analysis.ipynb  vqc.ipynb
example/bidirectional/: Bidirectional experiments.ipynb  Cnots and depth.ipynb
example/isometry/: Cnots and depth.ipynb  experiments.ipynb
qclib/: __init__.py  decompose2q.py  encoding.py  entanglement.py  isometry.py  multiplexor.py  performace_sparse.py  pqm.py  quantum_circuit.py  sparse_isometry.py  state_preparation.py  test_unitary_thiago.py  tests-notebook.ipynb  unitary.py  util.py  utils.py
test/: test_adaptive.py  test_baa.py  test_baa_lowrank.py  test_baa_schmidt.py  test_bdsp.py  test_bergholm.py  test_bidirectional.py  test_blackbox.py  test_cvoqram.py  test_dcsp.py  test_encoding.py  test_entanglement.py  test_fnpoints.py  test_frqi.py  test_gleining.py  test_initialize.py  test_isometry.py  test_ldmcu_approx.py  test_linear_toffoli.py  test_lowrank.py  test_majority.py  test_mc_gate.py  test_mcg.py  test_mcx_gate.py  test_merge.py  test_merge_initialize.py  test_mixed.py  test_mottonen.py  test_multiplexor.py  test_pqm.py  test_schmidt.py  test_sparse_iso.py  test_sparse_sp.py  test_svd_initialize.py  test_toffoli.py  test_topdown.py  test_ucg_initialize.py  test_ucgate.py  test_ucge.py  test_unitary.py  (+3 more)
(+121 files in other folders)
