[metadata]
name = qclib
version = 0.0.2
author = Adenilton Silva
author_email = ajsilva@cin.ufpe.br
description = Qclib is a quantum computing library using Qiskit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qclib/qclib
project_urls =
    Bug Tracker = https://github.com/qclib/qclib/issues
classifiers =
    Programming Language :: Python :: 3

[options]

packages = find:
python_requires = >=3.7
install_requires =
    qiskit
[options.packages.find]
where = src